enaml/qt/editor/editor.css
/*----------------------------------------------------------------------------*/
/*  Copyright (c) 2012, Enthought, Inc.                                       */
/*  All rights reserved.                                                      */
/*----------------------------------------------------------------------------*/
body {
    background: transparent;
}

.container {
    margin: 0;
    padding: 0;
    display: inline-block;
    position: relative;
}

.add_button {
    margin: 0;
    padding: 0;
    background: none;
    border: none;
    font-size: 1.2em;
    top: 0;
    right: 5px;
    position: absolute;
}

.add_button:active {
    text-shadow: 0 -1px 1px rgba(0,0,0,0.5);
}

.tabs {
    height: 27px;
    display: block;
    float: left;
    width: 94%;
    font-size: 0.8em;
}

.tabs div {
    position: relative;
    display: inline-block;
    color: #000;
    white-space: nowrap;
    overflow: hidden;
    max-width: 150px;
    background-image: url(tab.png);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    height: 27px;
    line-height: 27px;
    vertical-align: middle;
}

.tabs div:hover {
    cursor: default;
}

.tabs .current {
    color: #fff;
    background-image: url(tab_current.png);
}

.tabs div span {
    margin: 0 13px 0 12px;
}

.tabs div button {
    position: absolute;
    top: 6px;
    right: 11px;
    border: none;
    background: transparent;
    background-image: url(close.png);
    background-repeat: no-repeat;
    width: 15px;
    height: 15px;
    padding: 0;
    color: #ccc;
}

.placeholder {
    opacity: 0.5;
}

.ui-sortable-helper {
    opacity: 1 !important;
}

